Changes from Ant 1.7.0Beta3 to current SVN version
==================================================

Changes that could break older environments:
-------------------------------------------

Fixed bugs:
-----------

Other changes:
--------------

* Upgraded XML API and parser to Xerces 2.8.1

Changes from Ant 1.7.0Beta2 to Ant 1.7.0Beta3 
=============================================

Changes that could break older environments:
-------------------------------------------

* Removed launcher classes from nodeps jar.

* <classconstants> filter reader uses ISO-8879-1 encoding to read
  the java class file. Bugzilla report 33604.

* Defer reference process. Bugzilla 36955, 34458, 37688.

Fixed bugs:
-----------

* <checksum> with file and todir option failed. Bugzilla report 37386.

* <path location="loc"> was broken (Regression from beta1).
  Bugzilla report 40547.

* nested fileset in <cab> did not work. Bugzilla report 39439.

* the ant wrapper script should now correctly locate the java
  executable in more recent IBM JDKs for AIX as well.

* URLResource did not close jar files, and also did not disconnect HTTPConnection (s).

* error calling junitreport. Bugzilla 40595. 

* <junittask/> created junitvmwatcher*.properties files but did not close and delete them.  

* <xmlproperty> did not create properties for empty leaf elements.
  Bugzilla report 26286.

* UnknownElement.maybeConfigure always configured.
  Bugzilla report 40641.

* no check for refid when prefix attribute is set in zipfileset.
  Bugzilla report 30498.

* fix for junit4 issue introducted since beta2.
  Bugzilla report 40682.

* Error in duplicate project name with <import> and <antcall>.
  Bugzilla report 39920.

* junit4 did not work with fork=no and junit4 in $ANT_HOME/lib.
  Bugzilla report 40697.

* PathConvert on Windows should process forward and back slashes equivalently.
  Bugzilla report 32884.

* ant.bat now looks in %USERPROFILE% and %HOMEDRIVE%%HOMEPATH% in addition to